--- a/common/css/options.css
+++ b/common/css/options.css
@@ -58,7 +58,7 @@ input { margin-left: 5px; margin-right: 5px; }
 
 #ActivatorOptions > div { display: none; }
 
-#habitrpgForm {
+#habiticaForm {
     position: relative;
     left: 50%;
     width: 550px;
